refactor: move the invoker types out of dom and nest the focus invoker
The types are not about the DOM: the same declarations are what
Page.executeJs would be invoked through, so they now live in
com.vaadin.flow.js.

The interface behind Focusable is a nested interface of it, rather than a
file of its own, so the declarations sit with the code that calls them.
Its two focus methods are one: passing no options passes null, which a
browser reads as the empty set of options it would use anyway, so the
choice between them is gone from both the interface and the caller. An
argument of a call may therefore be null.